move license at html from readme

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+<!-- React | MIT License | https://github.com/facebook/react/blob/master/LICENSE -->
+<!-- axios | MIT License | https://github.com/axios/axios/blob/master/LICENSE -->
+<!-- bootstrap | MIT License | https://github.com/twbs/bootstrap/blob/master/LICENSE -->
 <!DOCTYPE html>
 <html lang="jp">
   <head>
